[gd_scene load_steps=2 format=3 uid="uid://settings_panel_001"]

[ext_resource type="Script" path="res://scripts/ui/SettingsPanel.gd" id="1_0"]

[node name="SettingsPanel" type="Panel"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="SettingsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0

[node name="Title" type="Label" parent="SettingsContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Audio" type="VBoxContainer" parent="SettingsContainer/TabContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="SettingsContainer/TabContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/TabContainer/Audio/MasterVolume"]
layout_mode = 2
text = "Master Volume:"

[node name="Slider" type="HSlider" parent="SettingsContainer/TabContainer/Audio/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="SettingsContainer/TabContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/TabContainer/Audio/MusicVolume"]
layout_mode = 2
text = "Music Volume:"

[node name="Slider" type="HSlider" parent="SettingsContainer/TabContainer/Audio/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 0.8

[node name="SFXVolume" type="HBoxContainer" parent="SettingsContainer/TabContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/TabContainer/Audio/SFXVolume"]
layout_mode = 2
text = "SFX Volume:"

[node name="Slider" type="HSlider" parent="SettingsContainer/TabContainer/Audio/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 0.9

[node name="Graphics" type="VBoxContainer" parent="SettingsContainer/TabContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="SettingsContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Fullscreen"

[node name="VSync" type="CheckBox" parent="SettingsContainer/TabContainer/Graphics"]
layout_mode = 2
text = "VSync"
button_pressed = true

[node name="MaxFPS" type="HBoxContainer" parent="SettingsContainer/TabContainer/Graphics"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/TabContainer/Graphics/MaxFPS"]
layout_mode = 2
text = "Max FPS:"

[node name="SpinBox" type="SpinBox" parent="SettingsContainer/TabContainer/Graphics/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 300.0
value = 60.0

[node name="Gameplay" type="VBoxContainer" parent="SettingsContainer/TabContainer"]
layout_mode = 2

[node name="TextSpeed" type="HBoxContainer" parent="SettingsContainer/TabContainer/Gameplay"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/TabContainer/Gameplay/TextSpeed"]
layout_mode = 2
text = "Text Speed:"

[node name="Slider" type="HSlider" parent="SettingsContainer/TabContainer/Gameplay/TextSpeed"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 3.0
value = 1.0

[node name="ShowDamageNumbers" type="CheckBox" parent="SettingsContainer/TabContainer/Gameplay"]
layout_mode = 2
text = "Show Damage Numbers"
button_pressed = true

[node name="ShowHealthBars" type="CheckBox" parent="SettingsContainer/TabContainer/Gameplay"]
layout_mode = 2
text = "Show Health Bars"
button_pressed = true

[node name="Accessibility" type="VBoxContainer" parent="SettingsContainer/TabContainer"]
layout_mode = 2

[node name="HighContrast" type="CheckBox" parent="SettingsContainer/TabContainer/Accessibility"]
layout_mode = 2
text = "High Contrast"

[node name="LargeText" type="CheckBox" parent="SettingsContainer/TabContainer/Accessibility"]
layout_mode = 2
text = "Large Text"

[node name="ColorBlindMode" type="HBoxContainer" parent="SettingsContainer/TabContainer/Accessibility"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/TabContainer/Accessibility/ColorBlindMode"]
layout_mode = 2
text = "Color Blind Mode:"

[node name="OptionButton" type="OptionButton" parent="SettingsContainer/TabContainer/Accessibility/ColorBlindMode"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Protanopia"
popup/item_1/id = 1
popup/item_2/text = "Deuteranopia"
popup/item_2/id = 2
popup/item_3/text = "Tritanopia"
popup/item_3/id = 3

[node name="ButtonContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="SettingsContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="ResetButton" type="Button" parent="SettingsContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to Defaults"

[node name="CloseButton" type="Button" parent="SettingsContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close" 